update package+remove unuseful icons+update gradle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">القرآن الكريم</string>
+    <string name="app_name">ثُمن</string>
     <string name="index">الفهرس</string>
     <string name="go_to">اذهب إلى</string>
     <string name="memorize">الحفظ</string>
